--- a/.github/workflows/template.yml
+++ b/.github/workflows/template.yml
@@ -53,7 +53,7 @@ jobs:
         with:
           targetPlatform: Android
           androidAppBundle: true
-          androidKeystoreName: "jkklkkk"
+          androidKeystoreName: "Thenabilkarim"
           androidKeystoreBase64: ${{ secrets.ANDROID_KEYSTORE_BASE64 }}
           androidKeystorePass: ${{ secrets.ANDROID_KEYSTORE_PASS }}
           androidKeyaliasName: ${{ secrets.ANDROID_KEYALIAS_NAME }}
